@@ -1,3 +1,10 @@
+2013-03-07
+----------
+
+Added a test utility for measuring the
+speed of the different generators
+
+
 2013-03-05
 ----------
 
